# ai-util

./: .eslintrc.cjs  .gitattributes  .gitignore  CLAUDE.md  DESIGN_BRIEF.md  DESIGN_NOTES.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
design-reference/: README.md
design-reference/chats/: chat1.md
design-reference/project/: app.jsx  host-email.jsx  icons.jsx  index.html  panel.jsx  settings.jsx
docs/specs/: adaptive-formatting.md  dev-mode-and-panel-persist.md  quick-command-beta.md
src/: main.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey.rs  lib.rs  main.rs  selection.rs  settings.rs  state.rs  util.rs
src-tauri/src/commands/: completion.rs  mod.rs  models.rs  selection.rs  settings.rs  window.rs
src-tauri/src/llm/: gateway.rs  mod.rs  prompts.rs  provider_impl.rs  providers.rs  sse.rs
src-tauri/src/platform/: chrome.rs  cursor.rs  mod.rs  paster.rs
src-tauri/src/platform/macos/: chrome.rs  cursor.rs  mod.rs  paster.rs
src-tauri/src/platform/windows/: chrome.rs  cursor.rs  mod.rs  paster.rs
src-tauri/src/window/: mod.rs  panel.rs
src-tauri/tests/: live_providers.rs
src/components/: ActionButton.css  ActionButton.tsx  ActionIcon.tsx  ActionPicker.css  ActionPicker.tsx  ApiKeyInput.css  ApiKeyInput.tsx  EmptySelection.css  EmptySelection.tsx  ErrorView.css  ErrorView.tsx  HotkeyRecorder.css  HotkeyRecorder.tsx  ModelDropdown.css  ModelDropdown.tsx  ModelPickerModal.css  ModelPickerModal.tsx  PanelHeader.css  PanelHeader.tsx  PermissionPrompt.css  PermissionPrompt.tsx  ProviderIndicator.css  ProviderIndicator.tsx  ResultView.css  ResultView.tsx  SelectionPreview.css  SelectionPreview.tsx  ShortcutChip.css  ShortcutChip.tsx  StreamingView.css  StreamingView.tsx  TelemetryOverlay.css  TelemetryOverlay.tsx
src/lib/: errorKinds.ts  hooks.ts  models.ts  store.test.ts  store.ts  tauri.ts  telemetry.test.ts  telemetry.ts  types.ts
src/routes/: Onboarding.css  Onboarding.tsx  Panel.tsx  Playground.css  Playground.tsx  Settings.css  Settings.tsx
src/styles/: globals.css  tokens.css
src/test/: sanity.test.ts  setup.ts
tests/e2e/: COVERAGE_GAPS.md  README.md  global.d.ts  helpers.ts  onboarding.spec.ts  panel.spec.ts  playground.spec.ts  settings.spec.ts  tsconfig.json
(+21 files in other folders)
