[package]
name = "ai-text-actions"
version = "0.1.0"
description = "OS-wide AI text actions"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_text_actions_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core + plugins
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

# Window vibrancy / native effects
window-vibrancy = "0.5"

# Selection capture
get-selected-text = "0.1"

# Input synthesis (paste-back)
enigo = "0.2"

# HTTP + streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
eventsource-stream = "0.2"
futures-util = "0.3"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1"
parking_lot = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
# NSPanel conversion / cursor / vibrancy. We use the classic objc + cocoa
# crates because their macros are stable and a wide reference base exists.
# objc2 is also pulled in (for future use; one or the other can be removed
# once the implementation settles).
objc = "0.2"
objc-foundation = "0.1"
cocoa = "0.26"
core-graphics = "0.24"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPanel", "NSWindow"] }
objc2-foundation = "0.2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Lints used by the crate. Forward-declared items for M2–M6 are allowed at
# build time and tightened as each milestone lands. The `cargo-clippy` and
# `paste-enabled` `cfg` values come from the older `objc` crate's macros and
# our own M4 cfg gate; they're known and intentional.
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(cargo_clippy)', 'cfg(paste_enabled)'] }
dead_code = "allow"
